# Arcade-Learning-Environment

./: .cmake-format.yaml  CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/actions/containers/manylinux2014/: Dockerfile
.github/workflows/: build-ale-py.yml  build-ale.yml  release-ale-py.yml
docs/: README.md  SUMMARY.md  cpp-agent.md  environment.md  faq.md  games.md  getting-started.md  python-agent.md
examples/cpp-interface/: CMakeLists.txt
src/: CMakeLists.txt  ale_interface.cpp  ale_interface.hpp  ale_python_interface.hpp
src/common/: CMakeLists.txt  DynamicLoad.cpp  DynamicLoad.hpp  SDL2.cpp  SDL2.hpp  ScreenSDL.cpp  ScreenSDL.hpp  SoundSDL.cxx  SoundSDL.hxx
src/emucore/: CMakeLists.txt  Console.cxx  Console.hxx  OSystem.cxx  OSystem.hxx  Screen.hxx  Settings.cxx  System.cxx  System.hxx
src/emucore/bspf/: CMakeLists.txt
src/environment/: CMakeLists.txt  ale_state.cpp  ale_state.hpp  stella_environment.cpp  stella_environment.hpp
src/games/: CMakeLists.txt
src/games/supported/: CMakeLists.txt
src/os_dependent/: CMakeLists.txt
src/python/: __init__.py
src/python/gym/: __init__.py  environment.py
src/python/roms/: __init__.py  import_roms.py
tests/: CMakeLists.txt  fixtures.py  test_python_interface.py
